syntax = "proto3";

option go_package = "github.com/danielwangai/blockchain-project/proto";

service Node {
  rpc Handshake(Version) returns (Version);
  rpc HandleTransaction(Transaction) returns(Ack);
}

message Version {
  string version = 1;
  int32 height = 2;
  string listenAddr = 3;
  repeated string peerList = 4;
}

message Ack {}

message Block {
  Header header = 1;
  repeated Transaction transactions = 2;
}

message Header {
  int32 version = 1;
  int32 height = 2; // total number of blocks
  bytes prevHash = 3; // hash of the previous block
  bytes rootHash = 4; // merkle root of transaction
  int64 timestamp = 5; // when the block was created
}

// TxInput details of the where the value/coins are being sent from
message TxInput {
  // previous transaction hash
  bytes prevTxHash = 1;
  // the index of the output of the previous transaction
  uint32 prevOutIndex = 2;
  bytes publicKey = 3;
  bytes signature = 4;// TODO: remove tx signature - signature is generated after signing the transaction hence cannot present during signing
}

// TxOutput details of the where the value/coins are being sent to - Beneficiary
message TxOutput {
  // value to be sent to beneficiary
  int64 amount = 1;
  // address of the beneficiary of the transaction
  bytes address = 2;
}

message Transaction {
  int32 version = 1;
  repeated TxInput inputs = 2;
  repeated TxOutput outputs = 3;
}
